--- a/php/home.html
+++ b/php/home.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container" id="container">
             <div class="navbar" id="navbar">
-                <img src="F:\Website_Project_main\Home_Page_Layout\images\worlogo1.png" class="logo">
+                <img src="../images/worlogo1.png" class="logo">
                 <nav>
                     <ul>
                         <li><a href="#container">Home</a></li>
