--- a/php/home.html
+++ b/php/home.html
@@ -99,10 +99,10 @@
                          wd wohdowhdowod wohow hohw odhowhdodwoidwodo ihfihihhh iygygugyggug
                          oiwhdhwoow</p>
                     <ul class="sci">
-                        <li class="facebook"><a href=""><img src="F:\Website_Project_main\Home_Page_Layout\images\facebook.png"></a></li>
-                        <li class="whatsapp"><a href=""><img src="F:\Website_Project_main\Home_Page_Layout\images\whatsapp.png"></a></li>
-                        <li class="instagram"><a href=""><img src="F:\Website_Project_main\Home_Page_Layout\images\instagram.png"></a></li>
-                        <li class="twitter"><a href=""><img src="F:\Website_Project_main\Home_Page_Layout\images\twitter.png"></a></li>
+                        <li class="facebook"><a href=""><img src="../images/facebook.png"></a></li>
+                        <li class="whatsapp"><a href=""><img src="../images/whatsapp.png"></a></li>
+                        <li class="instagram"><a href=""><img src="../images/instagram.png"></a></li>
+                        <li class="twitter"><a href=""><img src="../images/twitter.png"></a></li>
                     </ul>
                 </div>
                 <div class="sec">
