--- a/php/home.html
+++ b/php/home.html
@@ -118,16 +118,16 @@
                     <h2>Contact Info</h2>
                     <ul class="call">
                         <li>
-                            <span><img src="F:\Website_Project_main\Home_Page_Layout\images\locate.png"></span>
+                            <span><img src="../images/locate.png"></span>
                             <p>E-103, Anand Vihar Flats
                             <br>Tragad Road, Chandkheda-382424</p>
                         </li>
                         <li>
-                            <span><img src="F:\Website_Project_main\Home_Page_Layout\images\call.png"></span>
+                            <span><img src="../images/call.png"></span>
                             <p><a href="tel:8460997269">+91 8460997269</a></p>
                         </li>
                         <li>
-                            <span><img src="F:\Website_Project_main\Home_Page_Layout\images\email.png"></span>
+                            <span><img src="../images/email.png"></span>
                             <p><a href="mailto:312002danny@gmail.com">312002danny@gmail.com</a></p>
                         </li>
                     </ul>
@@ -137,6 +137,6 @@
         <div class="copyright">
             <p>Copyright @ 2022 Wheels On Rent Team. All Rights Reserved.</p>
         </div>
-        <script src="F:\Website_Project_main\Home_Page_Layout\main.js"></script>
+        <script src="../main.js"></script>
     </body>
 </html>
