--- a/php/home.html
+++ b/php/home.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wheels On Rent</title>
-        <link rel="shortcut icon" type="image/x-icon" href="F:\Website_Project_main\Home_Page_Layout\images\Tyre.png">
+        <link rel="shortcut icon" type="image/x-icon" href="../images/Tyre.png">
         <link rel="stylesheet" href="../css/home.css">
         <script src="https://kit.fontawesome.com/b38a2e296f.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -31,7 +31,7 @@
                     <h3>You Can Rent Your Own Car</h3>
                     <p>(Put On Rent/Have On Rent)</p>
                     <h4>Grab It Now!</h4>
-                    <button type="button" class="login_btn" id="loginbtn" onclick="location.href='F:../php/login.html'">Log In<img src="../images/arrow.png"></button>
+                    <button type="button" class="login_btn" id="loginbtn" onclick="location.href='../php/login.php'">Log In<img src="../images/arrow.png"></button>
                 </div>
                 <div class="col-2">
                     <img src="../images/porche.png" class="home-car">
