--- a/php/home.html
+++ b/php/home.html
@@ -31,7 +31,7 @@
                     <h3>You Can Rent Your Own Car</h3>
                     <p>(Put On Rent/Have On Rent)</p>
                     <h4>Grab It Now!</h4>
-                    <button type="button" class="login_btn" id="loginbtn" onclick="location.href='../php/login.php'">Log In<img src="../images/arrow.png"></button>
+                    <button type="button" class="login_btn" id="loginbtn" onclick="location.href='../php/login.html'">Log In<img src="../images/arrow.png"></button>
                 </div>
                 <div class="col-2">
                     <img src="../images/porche.png" class="home-car">
