--- a/php/login.html
+++ b/php/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Car Rental Website</title>
-        <link rel="stylesheet" href="login.css">
+        <link rel="stylesheet" href="../css/login.css">
         <script src="https://kit.fontawesome.com/b38a2e296f.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -12,10 +12,10 @@
     <body>
         <div class="container" id="container">
             <div class="navbar">
-                <img src="F:\Website_Project_main\Home_Page_Layout\images\worlogo1.png" class="logo">
+                <img src="../images/worlogo1.png" class="logo">
                 <nav>
                     <ul>
-                        <li><a href="F:\Website_Project_main\Home_Page_Layout\home.html">Home</a></li>
+                        <li><a href="../php/home.html">Home</a></li>
                         <li><a href="#footer">About</a></li>
                         <li><a href="">Services</a></li>
                         <li><a href="">Pricing</a></li>
@@ -27,7 +27,7 @@
             <div class="top-arrow"><a href="#container"><i class="bi bi-arrow-up-square-fill"></i></a></div>
             <div class="row">
                 <div class="col-1">
-                    <img src="F:\Website_Project_main\Home_Page_Layout\images\jeep31.png" class="home-car1">
+                    <img src="../images/jeep31.png" class="home-car1">
                     <div class="color-box1"></div>
                 </div>
                     <div class="col-2">
