--- a/php/login.html
+++ b/php/login.html
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                             <button class="loginBtn">Login</button>
-                            <p class="text">Don't have an account? <a href="F:\Website_Project_main\Home_Page_Layout\signup.html">Sign Up</a></p>
+                            <p class="text">Don't have an account? <a href="../signup.html">Sign Up</a></p>
                         </div>
                     </div>
             </div>
@@ -61,10 +61,10 @@
                          wd wohdowhdowod wohow hohw odhowhdodwoidwodo ihfihihhh iygygugyggug
                          oiwhdhwoow</p>
                     <ul class="sci">
-                        <li class="facebook"><a href=""><img src="F:\Website_Project_main\Home_Page_Layout\images\facebook.png"></a></li>
-                        <li class="whatsapp"><a href=""><img src="F:\Website_Project_main\Home_Page_Layout\images\whatsapp.png"></a></li>
-                        <li class="instagram"><a href=""><img src="F:\Website_Project_main\Home_Page_Layout\images\instagram.png"></a></li>
-                        <li class="twitter"><a href=""><img src="F:\Website_Project_main\Home_Page_Layout\images\twitter.png"></a></li>
+                        <li class="facebook"><a href=""><img src="../images/facebook.png"></a></li>
+                        <li class="whatsapp"><a href=""><img src="../images/whatsapp.png"></a></li>
+                        <li class="instagram"><a href=""><img src="../images/instagram.png"></a></li>
+                        <li class="twitter"><a href=""><img src="../images/twitter.png"></a></li>
                     </ul>
                 </div>
                 <div class="sec">
@@ -80,16 +80,16 @@
                     <h2>Contact Info</h2>
                     <ul class="call">
                         <li>
-                            <span><img src="F:\Website_Project_main\Home_Page_Layout\images\locate.png"></span>
+                            <span><img src="../images/locate.png"></span>
                             <p>E-103, Anand Vihar Flats
                             <br>Tragad Road, Chandkheda-382424</p>
                         </li>
                         <li>
-                            <span><img src="F:\Website_Project_main\Home_Page_Layout\images\call.png"></span>
+                            <span><img src="../images/call.png"></span>
                             <p><a href="tel:8460997269">+91 8460997269</a></p>
                         </li>
                         <li>
-                            <span><img src="F:\Website_Project_main\Home_Page_Layout\images\email.png"></span>
+                            <span><img src="../images/email.png"></span>
                             <p><a href="mailto:312002danny@gmail.com">312002danny@gmail.com</a></p>
                         </li>
                     </ul>
