--- a/php/login.html
+++ b/php/login.html
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                             <button class="loginBtn">Login</button>
-                            <p class="text">Don't have an account? <a href="../signup.html">Sign Up</a></p>
+                            <p class="text">Don't have an account? <a href="../php/signup.html">Sign Up</a></p>
                         </div>
                     </div>
             </div>
