--- a/php/home.html
+++ b/php/home.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wheels On Rent</title>
-        <link rel="shortcut icon" type="image/x-icon" href="images\Tyre.png">
-        <link rel="stylesheet" href="home.css">
+        <link rel="shortcut icon" type="image/x-icon" href="../images/Tyre.png">
+        <link rel="stylesheet" href="../css/home.css">
         <script src="https://kit.fontawesome.com/b38a2e296f.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -14,7 +14,7 @@
     <body>
         <div id="container">
             <div class="navbar" id="navbar">
-                <img src="images\wor.png" class="logo">
+                <img src="../images/wor.png" class="logo">
                 <nav>
                     <ul>
                         <li><a href="#container">Home</a></li>
@@ -33,10 +33,10 @@
                     <h3>You Can Rent Your Own Car</h3>
                     <p>(Put On Rent/Have On Rent)</p>
                     <h4>Grab It Now!</h4>
-                    <button type="button" class="login_btn" id="loginbtn" onclick="location.href='login.html'">Log In<img src="images\arrow.png"></button>
+                    <button type="button" class="login_btn" id="loginbtn" onclick="location.href='login.html'">Log In<img src="../images/arrow.png"></button>
                 </div>
                 <div class="col-2">
-                    <img src="images\porche.png" class="home-car">
+                    <img src="../images/porche.png" class="home-car">
                     <div class="color-box"></div>
                 </div>
             </div>
@@ -396,10 +396,10 @@
                          wd wohdowhdowod wohow hohw odhowhdodwoidwodo ihfihihhh iygygugyggug
                          oiwhdhwoow</p>
                     <ul class="sci">
-                        <li class="facebook"><a href=""><img src="images\facebook.png"></a></li>
-                        <li class="whatsapp"><a href=""><img src="images\whatsapp.png"></a></li>
-                        <li class="instagram"><a href=""><img src="images\instagram.png"></a></li>
-                        <li class="twitter"><a href=""><img src="images\twitter.png"></a></li>
+                        <li class="facebook"><a href=""><img src="../images/facebook.png"></a></li>
+                        <li class="whatsapp"><a href=""><img src="../images/whatsapp.png"></a></li>
+                        <li class="instagram"><a href=""><img src="../images/instagram.png"></a></li>
+                        <li class="twitter"><a href=""><img src="../images/twitter.png"></a></li>
                     </ul>
                 </div>
                 <div class="sec">
@@ -415,16 +415,16 @@
                     <h2>Contact Info</h2>
                     <ul class="call">
                         <li>
-                            <span><img src="images\locate.png"></span>
+                            <span><img src="../images/locate.png"></span>
                             <p>E-103, Anand Vihar Flats
                             <br>Tragad Road, Chandkheda-382424</p>
                         </li>
                         <li>
-                            <span><img src="images\call.png"></span>
+                            <span><img src="../images/call.png"></span>
                             <p><a href="tel:8460997269">+91 8460997269</a></p>
                         </li>
                         <li>
-                            <span><img src="images\email.png"></span>
+                            <span><img src="../images/email.png"></span>
                             <p><a href="mailto:312002danny@gmail.com">312002danny@gmail.com</a></p>
                         </li>
                     </ul>
