--- a/php/home.html
+++ b/php/home.html
@@ -99,7 +99,7 @@
                                     <h3 id="car-name">
                                         <a href="#">Fortuner 4X4 Diesel</a>
                                     </h3>
-                                    <img src="images/fortuner.jpg">
+                                    <img src="../images/fortuner.jpg">
                                 </div>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                                     <h3 id="car-name">
                                         <a href="#">Mahindra Thar LX 4-Str</a>
                                     </h3>
-                                    <img src="images/thar.jpg">
+                                    <img src="../images/thar.jpg">
                                 </div>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                                     <h3 id="car-name">
                                         <a href="#">Harrier XE Diesel</a>
                                     </h3>
-                                    <img src="images/harrier.jpg">
+                                    <img src="../images/harrier.jpg">
                                 </div>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                                     <h3 id="car-name">
                                         <a href="#">Ford Endeavour Titanium</a>
                                     </h3>
-                                    <img src="images/endeavour.jpg">
+                                    <img src="../images/endeavour.jpg">
                                 </div>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                                     <h3 id="car-name">
                                         <a href="#"> suzuki swift VXi AMT</a>
                                     </h3>
-                                    <img src="images/swift.jpg">
+                                    <img src="../images/swift.jpg">
                                 </div>
                             </div>
                         </div>
@@ -249,7 +249,7 @@
                                     <h3 id="car-name">
                                         <a href="#">hyundai Verna SX 1.5 CRDi</a>
                                     </h3>
-                                    <img src="images/verna.jpg">
+                                    <img src="../images/verna.jpg">
                                 </div>
                             </div>
                         </div>
@@ -348,7 +348,7 @@
             <div class="review">
                 <div class="r-box">
                     <div class="c-info">
-                        <div class="c-img"><img src="images/danny.png"></div>
+                        <div class="c-img"><img src="../images/danny.png"></div>
                         <div class="c-name"><p>Danny Suthar</p></div>
                     </div>
                     <div class="r-text"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
@@ -356,7 +356,7 @@
 
                 <div class="r-box">
                     <div class="c-info">
-                        <div class="c-img"><img src="images/priyank.png"></div>
+                        <div class="c-img"><img src="../images/priyank.png"></div>
                         <div class="c-name"><p>Priyank Parmar</p></div>
                     </div>
                     <div class="r-text"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
@@ -364,21 +364,21 @@
 
                 <div class="r-box">
                     <div class="c-info">
-                        <div class="c-img"><img src="images/dhruv.png"></div>
+                        <div class="c-img"><img src="../images/dhruv.png"></div>
                         <div class="c-name"><p>Dhruv Panchal</p></div>
                     </div>
                     <div class="r-text"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
                 </div>
                 <div class="r-box">
                     <div class="c-info">
-                        <div class="c-img"><img src="images/danny1.png"></div>
+                        <div class="c-img"><img src="../images/danny1.png"></div>
                         <div class="c-name"><p>Dinesh Suthar</p></div>
                     </div>
                     <div class="r-text"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
                 </div>
                 <div class="r-box">
                     <div class="c-info">
-                        <div class="c-img"><img src="images/danny2.png"></div>
+                        <div class="c-img"><img src="../images/danny2.png"></div>
                         <div class="c-name"><p>Danny Suthar</p></div>
                     </div>
                     <div class="r-text"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
