--- a/php/home.html
+++ b/php/home.html
@@ -14,7 +14,7 @@
     <body>
         <div id="container">
             <div class="navbar" id="navbar">
-                <img src="../images/wor.png" class="logo">
+                <img src="../images/worlogo1.png" class="logo">
                 <nav>
                     <ul>
                         <li><a href="#container">Home</a></li>
@@ -99,7 +99,7 @@
                                     <h3 id="car-name">
                                         <a href="#">Fortuner 4X4 Diesel</a>
                                     </h3>
-                                    <img src="../images/fortuner.jpg">
+                                    <img src="../images/fortuner.jpeg">
                                 </div>
                             </div>
                         </div>
